compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-4/neg/1.4.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 4 -> sentence 1
 * NUMBER: 4
 * DESCRIPTION: Real literals with omitted whole-number part, float suffix not at the end and underscores at the different positions.
 */

konst konstue = 1F0_0
konst konstue = 22f1_01923___091290_4
konst konstue = 333e-0_0000000000F1_2903490
konst konstue = 4_4_4_4E-9_9_9_9_9_9_9_9_9_9_9_9_9_9_9_9_9f0_0_0_0_0_0_0_0_0_0_0_0_0_0_0_0
konst konstue = 777777_______________7e0_909090_9_0_9_0F0
konst konstue = 8888_______________8888e-1f1_______________0
konst konstue = 99______999______99______99EF0

konst konstue = 123______4567______9e9876______54321F9______9999______99999______999999______99999
konst konstue = 2__3__4__5__6__7__8E0f0
konst konstue = 5e50__501f01__1
konst konstue = 6__54e5F10
konst konstue = 765__43f00__000
konst konstue = 8__765__432F010
konst konstue = 9__8765__4321f1__00
